# aeyes

./: .env  .gitignore  Cargo.toml  README.md  autoresearch.jsonl  prompt.md
.github/workflows/: ci.yml  release.yml
packaging/winget/: Elecnix.AEyes.yaml
skills/aeyes/: SKILL.md
src/: chrome_capture.rs  lib.rs  main.rs  motion.rs
