[package]
name = "aeyes"
version = "1.0.1"
edition = "2021"
description = "Non-interactive webcam daemon for instant frame and video capture with live streaming"
license = "MIT"
repository = "https://github.com/elecnix/aeyes"
keywords = ["webcam", "camera", "video", "streaming", "daemon"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22.1"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "service"] }
image = "0.25"
nokhwa = { version = "0.10.10", features = ["input-native", "output-threaded"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.28"
ureq = { version = "3", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
rscam = "0.5.5"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
